--- a/ATRXEngine/CMakeLists.txt
+++ b/ATRXEngine/CMakeLists.txt
@@ -11,8 +11,9 @@ file(GLOB_RECURSE ATRXEngineSources
 	"${CMAKE_CURRENT_SOURCE_DIR}/Core/Engine.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Core/Memory.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Core/Memory.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/Core/Event.h"
-	"${CMAKE_CURRENT_SOURCE_DIR}/Core/Event.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Event/EventBus.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Event/EventBus.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Event/EventCallback.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Events/Event.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Events/WindowEvents.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Input/InputCodes.h"
