--- a/ATRXEngine/CMakeLists.txt
+++ b/ATRXEngine/CMakeLists.txt
@@ -42,6 +42,8 @@ file(GLOB_RECURSE ATRXEngineRendererAPISources
 	"${CMAKE_CURRENT_SOURCE_DIR}/Renderer/API/RendererSurface.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Renderer/API/RendererDevice.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Renderer/API/RendererDevice.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Renderer/API/RendererSwapchain.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Renderer/API/RendererSwapchain.cpp"
 )
 
 file(GLOB_RECURSE ATRXEngineRendererSources
@@ -58,6 +60,8 @@ file(GLOB_RECURSE ATRXEngineRHIVulkanRendererSources
 	"${CMAKE_CURRENT_SOURCE_DIR}/Platform/RHI/Vulkan/VulkanPhysicalDevice.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Platform/RHI/Vulkan/VulkanDevice.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Platform/RHI/Vulkan/VulkanDevice.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Platform/RHI/Vulkan/VulkanSwapchain.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Platform/RHI/Vulkan/VulkanSwapchain.cpp"
 )
 
 add_definitions(-DATRX_ENGINE_BUILD -DATRX_ENGINE_DEBUG)
